fixed nav bar unintetnional behavior, removed overflow: hidden from <body> CSS, fixed navbar to top of page.

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
   );
   background-size: 200%;
   height: 100vh;
-  overflow: hidden;
+  /*overflow: hidden;*/
   margin: 0px;
 }
 
